<resources>
    <string name="app_name" translatable="false">hts</string>
    <string name="error_unable_to_start_form">An error occurred when starting the form</string>
    <string name="error_unable_to_save_form">An error occurred when saving the form</string>
    <string name="hts">Hts</string>
    <string name="add_member">Add Member</string>
    <string name="sort">Sort</string>
    <string name="home">Home</string>
    <string name="add_family">Add family</string>
    <string name="scan_qr">Scan QR</string>
    <string name="job_aids">Job Aids</string>
    <string name="saving_dialog_title">Saving</string>
    <string name="interpunct" translatable="false">\u00b7</string>
    <string name="record_hts">Provide Hts Services</string>
    <string name="manual_process_visit">Process Visit</string>
    <string name="continue_visit">Continue</string>
    <string name="edit_visit">Edit</string>
    <string name="hts_visit_in_progress">Visit In Progress</string>
    <string name="hts_service_visit_in_progress">Hts Service In Progress</string>
    <string name="hts_procedure_visit_in_progress">Hts Procedure In Progress</string>
    <string name="hts_visit_conducted">Hts Visit Conducted</string>

    <string name="hts_profile">Hts Profile</string>

    <string name="hts_medical_history">Medical History</string>
    <string name="hts_followup_visit">Follow Up Visit</string>
    <string name="hts_physical_examination">Physical Examination</string>
    <string name="hts_visit_type_action_title">Visit Type</string>
    <string name="hts_pre_test_services_action_title">Pre-Test Services</string>
    <string name="hts_first_hiv_test_action_title">First HIV Test Using Bioline/Dual Test</string>
    <string name="hts_repeate_of_first_hiv_test_action_title">First HIV Test Using Bioline/Dual : Test Number %d</string>
    <string name="hts_first_hiv_test_action_entity_type">HTS First HIV Test %d</string>
    <string name="hts_second_hiv_test_action_title">Second HIV Test using First Response</string>
    <string name="hts_repeate_of_second_hiv_test_action_title">Second HIV Test Using First Response : Test Number %d</string>
    <string name="hts_second_hiv_test_action_entity_type">HTS Second HIV Test %d</string>
    <string name="hts_unigold_hiv_test_action_title">Uni-Gold HIV Test</string>
    <string name="hts_repeate_of_unigold_hiv_test_action_title">Uni-Gold HIV Test : Test Number %d</string>
    <string name="hts_unigold_hiv_test_action_entity_type">Uni-Gold HIV Test %d</string>
    <string name="hts_post_test_services_action_title">Post-Test Services</string>
    <string name="hts_dna_pcr_sample_collection_action_title">DNA-PCR Sample Collection</string>
    <string name="hts_linkage_to_prevention_services_action_title">Linkage to Prevention Services</string>
    <string name="hts_repeate_of_first_hiv_test_title">Repeat of First HIV Test</string>
    <string name="hts_repeate_of_first_hiv_test_action_entity_type">Repeat of First HIV Test %d</string>

    <string name="optional">Optional</string>
    <string name="error_unable_save_visit">Unable to save visit</string>
    <string name="return_to_previous_page">Return all Hts Clients</string>
    <string name="last_visit_40_days_ago">Last visit %1$s ago</string>
    <string name="view_medical_history">View medical history</string>
    <string name="call_no_number_provided">(no number provided)</string>
    <string name="view_upcoming_services">View upcoming services</string>
    <string name="family_has_nothing_due">Family has nothing due</string>
    <string name="go_to_family_s_profile">Go to family\'s profile</string>
    <string name="family_has_services_due">Family has services due</string>
    <string name="primary_care_giver">PRIMARY CARE GIVER</string>
    <string name="family_head">FAMILY HEAD</string>
    <string name="family_has_service_overdue"><![CDATA[Family has <font color=#FF0000>services overdue</font></b>]]></string>
    <string name="vaccine_service_upcoming"><![CDATA[%1$s <font color=#7f7f7f>upcoming (%2$s)</font></b>]]></string>
    <string name="vaccine_service_overdue"><![CDATA[%1$s <font color=#f04646>overdue (%2$s)</font></b>]]></string>
    <string name="vaccine_service_due"><![CDATA[%1$s <font color=#000000>due (%2$s)</font></b>]]></string>
    <string name="call_hts_client">Hts Client</string>
    <string name="head_of_family">Head of family</string>
    <string name="hts_client">Hts Client</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="copied_phone_number">PhoneNumber copied to clipboard</string>
    <string name="call">Call</string>
    <string name="refer_to_facility">Refer to facility</string>
    <string name="record_anc">Record ANC visit</string>
    <string name="record_anc_visit_not_done">ANC visit not done</string>
    <string name="not_visiting_this_month">Not visiting this month</string>
    <string name="undo">UNDO</string>
    <string name="call_family_head">Head of Family</string>
    <string name="no_phone_number">No Phone Number</string>
    <string name="call_primary_caregiver">Primary Caregiver</string>
    <string name="call_anc_client">ANC Client</string>
    <string name="call_pnc_client">PNC Client</string>
    <string name="call_head_of_family">Call Head of Family</string>
    <string name="view_hts_test_result">View hts test results</string>
    <string name="hts_positive">Hts positive</string>
    <string name="anc_string">ANC</string>
    <string name="pnc_string">PNC</string>
    <string name="visit_done">Visit Done</string>
    <string name="edit">EDIT</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="return_to_hts_clients">Return to Hts Clients</string>
    <string name="number_not_filled">client phone number, not filled</string>
    <string name="hts_visit">Hts Visits</string>
    <string name="collect_dna_pcr">Collect DNA PCR Sample</string>
    <string name="hts_samples">Hts Samples</string>
    <string name="hiv_verification_results_title">HIV Verification Results</string>
    <string name="verification_result_label">Result</string>
    <string name="verification_result_date_label">Result Date</string>
    <string name="verification_ctc_id_label">CTC ID</string>
    <string name="verification_status_positive">Positive</string>
    <string name="verification_status_negative">Negative</string>
    <string name="verification_status_unknown">Unknown</string>
    <string name="verification_value_not_available">Not available</string>

</resources>
