<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <RelativeLayout
            android:id="@+id/notification_and_referral_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:visibility="gone">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/notification_and_referral_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </androidx.recyclerview.widget.RecyclerView>
        </RelativeLayout>

        <View
            android:id="@+id/view_notification_and_referral_row"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_below="@+id/notification_and_referral_row"
            android:background="@color/light_grey"
            android:visibility="gone" />


        <RelativeLayout
            android:id="@+id/rlLastVisit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/notification_and_referral_row"
            android:background="@drawable/list_item_background_selctor"
            android:padding="20dp"
            android:visibility="visible">

            <ImageView
                android:id="@+id/tick_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:src="@drawable/childrow_history" />

            <ImageView
                android:id="@+id/iv_last_visit_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/row_goto" />

            <org.smartregister.view.customcontrols.CustomFontTextView
                android:id="@+id/ivViewHistoryArrow"
                style="@style/CustomFontTextViewStyle.ListView.Normal.MultipleLines"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/tick_image"
                android:text="@string/view_medical_history"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/light_grey_text" />
        </RelativeLayout>

        <View
            android:id="@+id/view_last_visit_row"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_below="@+id/rlLastVisit"
            android:background="@color/light_grey"
            android:visibility="gone" />

        <RelativeLayout
            android:id="@+id/rlUpcomingServices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view_last_visit_row"
            android:background="@drawable/list_item_background_selctor"
            android:padding="20dp"
            android:visibility="gone">

            <ImageView
                android:id="@+id/cross_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:src="@drawable/childrow_upcoming" />

            <ImageView
                android:id="@+id/iv_upcoming_services_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/row_goto" />

            <org.smartregister.view.customcontrols.CustomFontTextView
                android:id="@+id/textview_name_due"
                style="@style/CustomFontTextViewStyle.ListView.Normal.MultipleLines"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_toLeftOf="@+id/iv_upcoming_services_arrow"
                android:layout_toRightOf="@+id/cross_image"
                android:gravity="left|center_horizontal"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@android:color/black" />

            <org.smartregister.view.customcontrols.CustomFontTextView
                android:id="@+id/ivViewUpcomingServicesArrow"
                style="@style/CustomFontTextViewStyle.ListView.Normal.MultipleLines"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textview_name_due"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/cross_image"
                android:text="@string/view_upcoming_services"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/darker_gray" />
        </RelativeLayout>

        <View
            android:id="@+id/view_positive_date_row"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_below="@+id/rlUpcomingServices"
            android:background="@color/light_grey"
            android:visibility="gone" />

        <RelativeLayout
            android:id="@+id/rlHtsPositiveDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view_positive_date_row"
            android:background="@color/white"
            android:paddingLeft="16dp"
            android:paddingTop="12dp"
            android:paddingRight="16dp"
            android:paddingBottom="12dp"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/verification_summary_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_verification_summary_card"
                android:orientation="vertical"
                android:paddingBottom="16dp">

                <org.smartregister.view.customcontrols.CustomFontTextView
                    android:id="@+id/textview_verification_title"
                    style="@style/CustomFontTextViewStyle.ListView.Normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingTop="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/hiv_verification_results_title"
                    android:textColor="@color/verification_card_title"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="12dp"
                    android:background="@color/verification_card_divider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp">

                    <org.smartregister.view.customcontrols.CustomFontTextView
                        style="@style/CustomFontTextViewStyle.ListView.Normal"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/verification_result_label"
                        android:textColor="@color/verification_card_label"
                        android:textSize="14sp" />

                    <org.smartregister.view.customcontrols.CustomFontTextView
                        android:id="@+id/textview_verification_results"
                        style="@style/CustomFontTextViewStyle.ListView.Normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_verification_status_chip_neutral"
                        android:paddingLeft="12dp"
                        android:paddingTop="4dp"
                        android:paddingRight="12dp"
                        android:paddingBottom="4dp"
                        android:text="@string/verification_status_unknown"
                        android:textColor="@color/verification_status_neutral_text"
                        android:textSize="13sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/row_verification_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp">

                    <org.smartregister.view.customcontrols.CustomFontTextView
                        style="@style/CustomFontTextViewStyle.ListView.Normal"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/verification_result_date_label"
                        android:textColor="@color/verification_card_label"
                        android:textSize="14sp" />

                    <org.smartregister.view.customcontrols.CustomFontTextView
                        android:id="@+id/textview_verification_date"
                        style="@style/CustomFontTextViewStyle.ListView.Normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/verification_value_not_available"
                        android:textColor="@color/verification_card_value"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/row_verification_ctc_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:visibility="gone">

                    <org.smartregister.view.customcontrols.CustomFontTextView
                        style="@style/CustomFontTextViewStyle.ListView.Normal"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/verification_ctc_id_label"
                        android:textColor="@color/verification_card_label"
                        android:textSize="14sp" />

                    <org.smartregister.view.customcontrols.CustomFontTextView
                        android:id="@+id/ivViewCtcId"
                        style="@style/CustomFontTextViewStyle.ListView.Normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/verification_value_not_available"
                        android:textColor="@color/verification_card_value"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

        <View
            android:id="@+id/view_most_due_overdue_row"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_below="@+id/rlHtsPositiveDate"
            android:background="@color/light_grey"
            android:visibility="visible" />

        <RelativeLayout
            android:id="@+id/rlFamilyServicesDue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view_most_due_overdue_row"
            android:background="@drawable/list_item_background_selctor"
            android:padding="20dp"
            android:visibility="gone">

            <ImageView
                android:id="@+id/family_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:src="@drawable/childrow_family" />

            <ImageView
                android:id="@+id/iv_family_services_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/row_goto" />

            <org.smartregister.view.customcontrols.CustomFontTextView
                android:id="@+id/textview_family_has"
                style="@style/CustomFontTextViewStyle.ListView.Normal.MultipleLines"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/family_image"
                android:gravity="center_horizontal"
                android:text="@string/family_has_nothing_due"
                android:textColor="@android:color/black" />

            <org.smartregister.view.customcontrols.CustomFontTextView
                android:id="@+id/text_view_family_profile"
                style="@style/CustomFontTextViewStyle.ListView.Normal.MultipleLines"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textview_family_has"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/family_image"
                android:text="@string/go_to_family_s_profile"
                android:textColor="@android:color/darker_gray" />

        </RelativeLayout>

        <View
            android:id="@+id/view_family_row"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_below="@+id/rlFamilyServicesDue"
            android:background="@color/light_grey"
            android:visibility="gone" />

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="@style/Base.Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />
</RelativeLayout>
